add endpoint to copy objective subtrees
